<resources>
    <string name="app_name">Still Shopper</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_process_bar">Processando</string>
    <string name="str_process_msn_load">Loading.........</string>
    <string name="new_game">Perfil</string>
    <string name="help">Ajuda</string>
    <string name="search_title">Pesquisar</string>
    <string name="str_pesquisar">Pesquisar..</string>
    <string name="close">Finalizar</string>
    <string name="pefil">Configuração</string>
    <string name="qrcode">Leitura do Codigo</string>
    <string name="str_info_productor">Informação do Produto</string>
    <string name="str_error_saving_photo">Erro as Salvar a Foto..</string>
    <string name="supermercado">Supermercado</string>
    <string name="endere_o">Endereço</string>
    <string name="cep">Cep</string>
    <string name="cnpj">Cnpj</string>
    <string name="avl_txt_supermarket_condutor">Separador</string>
    <string name="avl_supermarket_conductor_nome">Nome</string>
    <string name="avl_supermarket_conductor_contrato">Rg/Cpf</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="avl_txt_supermarket_conductor_endere_o">Endereço</string>
    <string name="avl_txt_supermarket_email_email">Email</string>
    <string name="avl_txt_supermarket_contatos">Telefones</string>
    <string name="msn_title">Mensagem.</string>
    <string name="msn_update_ok">Atualizado com Sucesso</string>
    <string name="msn_update_error">Erro ao Atualizar Registro.</string>
    <string name="msn_finalizar_app">Deseja Finalizar Aplicativo ?</string>
    <string name="str_version">v.0.1</string>
    <string name="str_version_dvl">v.0.0</string>
    <string name="not_conect">Falha com a Interner..</string>
    <string name="user_invalid_acess">Usuario ou Senha Invalidos..!</string>
    <string name="user_acess_invalid_input_login">Campo de Usuario em Branco...!</string>
    <string name="user_acess_invalid_input_password">Senha em Branco..!</string>
    <string name="str_error_response_api">Erro ao Consumir Api</string>
    <string name="not_supermarket">Error de Seleção de Mercado..!</string>
    <string name="conductor_not_association_qrcode">Condutor Não esta Associado a esta Etiqueta..!</string>
    <string name="order_not_available">Pedido Não Disponivel para seu Veiculo..!</string>
    <string name="error_not_list_productor">Erro ao Listar Produtos..!</string>
    <string name="error_process">Erro ao Processar Requisição..!</string>
    <string name="str_destination_dif_pendente">Selecione um Status Diferente do Pendente..!</string>
    <string name="etq_no_order">Etiqueta Não e Deste Pedido..!</string>
    <string name="etq_ld_ivalida">Etiqueta Lida Invalida Tente Novamente..!</string>
    <string name="etq_ld_invalida">Etiqueta Lida Invalida Tente Novamente..!</string>
    <string name="error_selected_supermarket">Error de Seleção de Mercado..!</string>
    <string name="erro_response_convert">Erro ao Converter Retorno</string>
    <string name="active_cam">Ativando Camera.... Aguarde.!</string>
    <string name="router_in_stoped">Rota está Pausada...(Destinos Desabilitados.!)</string>
    <string name="not_destinations_select_surpermarkt">Não há Destinos para o Mercado Selecionado..!</string>
    <string name="not_customs_found">O Cliente Não Encontrado..!</string>
    <string name="order_recused">O Pedido em Recusado..!</string>
    <string name="order_delivered">O Pedido em Entregue..!</string>
    <string name="order_to_transitive">O Pedido Colocado em Transito..!</string>
    <string name="router_not_start">A Rota Não esta Ativa Para Esta Ação..!, Deseja Inicializar Rota..?</string>
    <string name="not_fault_server">Endereço do Servidor Invalido..!</string>
    <string name="visualizar_historicos">Históricos</string>
    <string name="visualizar_destinos">Visualizar Destinos</string>
    <string name="iniciar_roteiro">Iniciar Roteiro</string>
    <string name="pausar">Pausar</string>
    <string name="cancelar">Cancelar</string>
    <string name="finalizar">Finalizar</string>
    <string name="not_conected">Sem Conexção com a Internet...</string>
    <string name="content_description_media">Motodsdasda</string>
    <string name="msn_finalizar_logout_app">Deseja se Deslogar..?</string>
    <string name="str_deslo_supermarkts">Deseja se Deslogar do Mercado Atual..?</string>
    <string name="atualizar">Atualizar Supermercados</string>
    <string name="n_o_h_historicos_no_momento">Não Há Históricos no Momento..!</string>
    <string name="not_supermarket_associated">Não há Supermercados Associados...</string>
    <string name="not_conductor_vechicles">Condutor não está associado ao veiculo...</string>
    <string name="not_router_conductor">Não há Rotas associadas para o Condutor...</string>
    <string name="not_executer_router_actions">Falha ao Executar Ação da Rota..</string>
    <string name="not_destinations_init">Não há Destino Inicializados..</string>
    <string name="name_cliente">Cliente</string>
    <string name="customs_e_mail">E-mail</string>
    <string name="customs_contatos">Contatos</string>
    <string name="e_mail">E-mail</string>
    <string name="descri_o_do_produto">Descrição do Produto</string>
    <string name="car_deseja_load">Deseja Carregar o Carro..?</string>
    <string name="sadad">dsadsad</string>
    <string name="order_do_pedido">Order do Pedido</string>
    <string name="str_not_order_shopper_select">Não há Pedidos Associados para Mercado Selecionado..!</string>
    <string name="str_total_shopper">Total</string>
    <string name="n_o_coletado">Não Coletado</string>
    <string name="coletado">Coletado</string>


</resources>
