<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="wrap_content">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/colorCiza"
            android:orientation="vertical">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:elevation="36dp"
                    android:padding="6dp"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardUseCompatPadding="true"/>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:elevation="36dp"
                    android:padding="6dp"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardUseCompatPadding="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:orientation="vertical">


                            <ImageView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_person_outline_black_56dp" />

                            <View

                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?android:attr/listDivider" />


                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/avl_txt_supermarket_condutor"
                            android:textColor="#D84315"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:id="@+id/avl_txt_supermarket_conductor_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/avl_supermarket_conductor_contrato"
                            android:textColor="#D84315"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:id="@+id/avl_txt_supermarket_conductor_contrato"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="#D84315"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:id="@+id/avl_txt_supermarket_conductor_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/telefone"
                            android:textColor="#D84315"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:id="@+id/avl_txt_supermarket_conductor_telefone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/avl_txt_supermarket_conductor_endere_o"
                            android:textColor="#D84315"
                            android:textSize="18dp" />

                        <TextView

                            android:layout_marginLeft="10dp"
                            android:id="@+id/avl_txt_supermarket_conductor_endereco"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/avl_cdv_selecionar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:elevation="36dp"
                    android:padding="6dp"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:orientation="vertical">


                            <ImageView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_directions_car_black_56dp" />

                            <View

                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?android:attr/listDivider" />


                        </LinearLayout>


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="" />


                        <View

                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Placa/Decrição"
                            android:textColor="#D84315" />

                        <TextView
                            android:layout_marginLeft="10dp"

                            android:id="@+id/avl_txt_conductor_vehicles_placa_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=" "
                            android:textSize="10dp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Tipo de Veiculo"
                            android:textColor="#D84315" />

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:id="@+id/avl_txt_conductor_vehicles_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Capacidade de Carga Minima"
                            android:textColor="#D84315" />

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:id="@+id/avl_txt_conductor_vehicles_capacyt_min"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Capacidade de Carga Maxima"
                            android:textColor="#D84315"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/avl_txt_conductor_vehicles_capacyt_max"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:visibility="gone" />


                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />


                        <View
                            android:layout_width="0dp"
                            android:layout_height="15dp"
                            android:layout_weight="1" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>




            </LinearLayout>


        </LinearLayout>


    </ScrollView>



</LinearLayout>
