<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_layout"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        app:strokeWidth="1dp"
        card_view:cardCornerRadius="0dp"
        app:strokeColor="@color/colorVermelho1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">


            <!-- Media -->

            <View

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_do_pedido"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/act_conct_router_dest_txt_uuid"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:textSize="36dp"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Holo.Small" />




                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:padding="5dp"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="64dp"
                            android:textAlignment="center"
                            android:textAppearance="@android:style/TextAppearance.Holo.Small"
                            android:textSize="36dp" />









                    </LinearLayout>



                </LinearLayout>



            </LinearLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <View

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />



            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Totais"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium" />



                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textAlignment="center"
                            android:layout_marginLeft="6dp"
                            android:textSize="35dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Frete"/>

                        <TextView
                            android:textAlignment="center"
                            android:id="@+id/act_conct_router_dest_txt_name"
                            android:layout_marginLeft="6dp"
                            android:textSize="35dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0.00"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView

                            android:layout_marginLeft="6dp"
                            android:textSize="35dp"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Total"/>

                        <TextView
                            android:textAlignment="center"
                            android:id="@+id/act_conct_router_dest_txt_total"
                            android:layout_marginLeft="6dp"
                            android:textSize="35dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0.00"/>

                    </LinearLayout>







                </LinearLayout>



                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="6dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nome do Cliente"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium" />


                <TextView
                    android:id="@+id/act_conct_router_dest_txt_name_distance"
                    android:layout_marginLeft="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>


                <TextView
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customs_e_mail" />


                <TextView
                    android:id="@+id/act_conct_router_dest_txt_email"
                    android:layout_marginLeft="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>

                <TextView
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customs_contatos" />


                <TextView
                    android:id="@+id/act_conct_router_dest_txt_contatos"
                    android:layout_marginLeft="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>


                <TextView
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" Localização" />


                <TextView
                    android:id="@+id/act_conct_router_dest_txt_endereco"
                    android:layout_marginLeft="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>


                <TextView
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cep" />


                <TextView
                    android:id="@+id/act_conct_router_dest_txt_endereco_cep"
                    android:layout_marginLeft="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="11dp" />





            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>


                <Button
                    android:id="@+id/act_btn_shopper_orders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ver Produtos" />







                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1" />


            </LinearLayout>


        </LinearLayout>





    </com.google.android.material.card.MaterialCardView>





</LinearLayout>
